src/objects/Zoho_Case_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Case_Request_ID__c</fullName>
        <label>Case Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Created_By_Name__c</fullName>
        <label>Comment Created By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Created_Time_Text__c</fullName>
        <label>Comment Created Time Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Pending__c</fullName>
        <label>Is Pending</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoho_Case__c</fullName>
        <label>Zoho Case</label>
        <referenceTo>Zoho_Case__c</referenceTo>
        <relationshipLabel>Zoho Case Comments</relationshipLabel>
        <relationshipName>Zoho_Case_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Zoho Case Comment</label>
    <nameField>
        <displayFormat>ZCC-{00000000}</displayFormat>
        <label>Zoho Case Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoho Case Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>